--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,8 +5,8 @@ on:
   workflow_dispatch:
 
 env:
-  PACT_BROKER_BASE_URL: https://testdemo.pactflow.io
-  PACT_BROKER_TOKEN: ${{ secrets.PACTFLOW_TOKEN_FOR_CI_CD_WORKSHOP }}
+  PACT_BROKER_BASE_URL: https://lego.pactflow.io
+  PACT_BROKER_TOKEN: y-JJefkB6jdN4XBP0qEGAA
   REACT_APP_API_BASE_URL: http://localhost:3001
   VERSION: ${{ github.sha }}
   GIT_REF: ${{ github.ref }}
